unpackaged/main/default/objects/litify__lp_Rule__c/litify__lp_Rule__c.object-meta.xml
<CustomObject>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>