unpackaged/main/default/objects/litify__lp_Rule__c/fields/litify__lp_Apply_When__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Apply_When__c</fullName>
    <label>Apply When</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PARENT_RECORD_CREATED</fullName>
                <label>Parent Record is created</label>
            </value>
            <value>
                <fullName>PARENT_RECORD_CREATED_CHANGED_TO_MEET_CONDITIONS</fullName>
                <label>Parent Record is created or changed to subsequently meet conditions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>