unpackaged/main/default/objects/litify__lp_Rule__c/fields/litify__lp_List_Template__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_List_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The List applied to this rule is not a template.</errorMessage>
        <filterItems>
            <field>litify__lp_List__c.litify__lp_Template_Status__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify__lp_List__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>lp_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>