unpackaged/main/default/objects/litify__lp_Rule__c/fields/litify__lp_Logical_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Logical_Operator__c</fullName>
    <label>Logical Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <label>All conditions are true</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>Any conditions are true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>