unpackaged/main/default/objects/litify__lp_Rule__c/fields/litify__lp_Order__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>