unpackaged/main/default/objects/litify__lp_Rule__c/fields/litify__lp_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_SObject_Type__c</fullName>
    <formula>IF( 
	litify__lp_List_Template__c == null ,  litify__lp_Plan_Template__r.litify__lp_SObject_Type__c ,  litify__lp_List_Template__r.litify__lp_SObject_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SObject Type</label>
    <type>Text</type>
</CustomField>