unpackaged/main/default/objects/litify__lp_Rule__c/validationRules/litify__Must_Have_List_or_Plan_Template.validationRule-meta.xml
<ValidationRule>
    <fullName>litify__Must_Have_List_or_Plan_Template</fullName>
    <active>true</active>
    <errorConditionFormula>AND(litify__lp_List_Template__c == null , litify__lp_Plan_Template__c == null)
		||
		AND(litify__lp_List_Template__c != null , litify__lp_Plan_Template__c != null)</errorConditionFormula>
    <errorMessage>Rule must have a List Template or Plan Template</errorMessage>
</ValidationRule>